--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.1.0
+ace_tools==0.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiohttp-retry==2.9.1
@@ -9,17 +10,20 @@ altair==5.5.0
 amqp==5.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.7.0
+anyio==4.6.2.post1
 appdirs==1.4.4
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1733332318622/work
+appnope==0.1.4
 apprise==1.9.1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asgi-lifespan==2.1.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asttokens==2.4.1
+async-lru==2.0.4
 asyncpg==0.30.0
 asyncssh==2.19.0
 atpublic==5.0
-attrs==24.3.0
+attrs==24.2.0
 babel==2.16.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
@@ -30,12 +34,12 @@ blinker==1.9.0
 Brotli==1.1.0
 cachetools==5.5.0
 celery==5.4.0
-certifi==2024.12.14
+certifi==2024.8.30
 cffi==1.17.1
 cfgv==3.4.0
 chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
+charset-normalizer==3.4.0
+click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
@@ -43,13 +47,11 @@ cloudpickle==3.1.0
 colorama==0.4.6
 coloredlogs==15.0.1
 colorlog==6.9.0
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+comm==0.2.2
 ConfigArgParse==1.7
 configobj==5.0.9
-contourpy==1.3.1
+contourpy==1.3.0
 cookiecutter==2.6.0
-# Editable install with no version control (cookiecutter1==0.0.1)
--e /Users/rasmusarnmark/Desktop/Ml Ops/my_cookiecutter_project
 coolname==2.2.0
 coverage==7.6.9
 croniter==5.0.1
@@ -57,8 +59,8 @@ cryptography==43.0.3
 cycler==0.12.1
 datasets==3.2.0
 dateparser==1.2.0
-debugpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_563_nwtkoc/croot/debugpy_1690905063850/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
+debugpy==1.8.5
+decorator==5.1.1
 defusedxml==0.7.1
 Deprecated==1.2.15
 deprecation==2.1.0
@@ -84,11 +86,12 @@ dvc-task==0.40.2
 dynaconf==3.2.6
 entrypoints==0.4
 evidently==0.5.1
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+exceptiongroup==1.2.2
+executing==2.1.0
 Faker==33.1.0
 fastapi==0.115.6
-fastjsonschema==2.21.1
+fastjsonschema==2.20.0
+fasttext-wheel==0.9.2
 filelock==3.16.1
 Flask==3.1.0
 Flask-Cors==5.0.0
@@ -96,12 +99,13 @@ Flask-Login==0.6.3
 flatbuffers==24.12.23
 flatten-dict==0.4.2
 flufl.lock==8.1.0
-fonttools==4.55.3
+fonttools==4.54.1
+fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2024.9.0
 funcy==2.0
 gcsfs==2024.9.0.post1
-gdown==5.2.0
+gensim==4.3.3
 gevent==24.11.1
 geventhttpclient==2.3.3
 ghp-import==2.1.0
@@ -126,10 +130,10 @@ gto==1.7.2
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
-httpcore==1.0.7
+httpcore==1.0.6
 httplib2==0.22.0
 httptools==0.6.4
-httpx==0.28.1
+httpx==0.27.2
 huggingface-hub==0.27.0
 humanfriendly==10.0
 humanize==4.11.0
@@ -137,26 +141,39 @@ hydra-core==1.3.2
 hyperframe==6.0.1
 identify==2.6.3
 idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1733223117029/work
+importlib_metadata==8.5.0
 iniconfig==2.0.0
 invoke==2.2.0
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1734788142186/work
+ipykernel==6.29.5
+ipython==8.12.3
+ipywidgets==8.1.5
+isoduration==20.11.0
 iterative-telemetry==0.0.9
 itsdangerous==2.2.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
-Jinja2==3.1.5
+jedi==0.19.1
+Jinja2==3.1.4
 jinja2-humanize-extension==0.4.0
 joblib==1.4.2
+json5==0.9.25
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
-kiwisolver==1.4.8
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.7
 kombu==5.4.2
+lazy_loader==0.4
 lightning-utilities==0.11.9
 litestar==2.13.0
 litestar-htmx==0.4.1
@@ -165,8 +182,8 @@ Mako==1.3.8
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.0
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mergedeep==1.3.4
 mistune==3.0.2
@@ -174,6 +191,7 @@ mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.5.49
 mkdocs-material-extensions==1.3.1
+mne==1.8.0
 mpmath==1.3.0
 msgpack==1.1.0
 msgspec==0.18.6
@@ -182,56 +200,62 @@ multiprocess==0.70.16
 mypy==1.14.0
 mypy-extensions==1.0.0
 narwhals==1.19.1
-nbclient==0.10.2
+nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+nest-asyncio==1.6.0
 networkx==3.4.2
 neural_compressor==3.1.1
 nltk==3.9.1
 nodeenv==1.9.1
+notebook==7.2.2
+notebook_shim==0.2.4
 numpy==1.26.4
 oauth2client==4.1.3
 oauthlib==3.2.2
 omegaconf==2.3.0
 onnxruntime==1.20.1
+opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 opentelemetry-api==1.29.0
 optuna==4.1.0
 orjson==3.10.12
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+overrides==7.7.0
+packaging==24.1
 paginate==0.5.7
 pandas==2.2.3
 pandocfilters==1.5.1
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+parso==0.8.4
 pathspec==0.12.1
 patsy==1.0.1
 pendulum==3.0.0
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pexpect==4.9.0
+pickleshare==0.7.5
 pillow==11.0.0
 pipreqs==0.5.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
+platformdirs==4.2.2
 plotly==5.24.1
 pluggy==1.5.0
 polyfactory==2.18.1
+pooch==1.8.2
 pre_commit==4.0.1
 prefect==3.1.10
 prettytable==3.12.0
 prometheus-fastapi-instrumentator==7.0.0
-prometheus_client==0.21.1
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1733302527033/work
+prometheus_client==0.21.0
+prompt_toolkit==3.0.47
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.2
-psutil @ file:///Users/cbousseau/work/recipes/ci_py311_2/psutil_1678995687212/work
+psutil==6.0.0
 ptflops==0.7.4
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-cpuinfo==9.0.0
 pyarrow==18.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pybind11==2.13.6
 pycocotools==2.0.8
 pycparser==2.22
 pydantic==2.10.4
@@ -242,31 +266,32 @@ pydeck==0.9.1
 pydot==3.0.3
 PyDrive2==1.21.3
 pygit2==1.16.0
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1733221634316/work
+Pygments==2.18.0
 pygtrie==2.5.0
 pymdown-extensions==10.13
 pyOpenSSL==24.2.1
 pyparsing==3.2.0
-PySocks==1.7.1
 pytest==8.3.4
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-json-logger==2.0.7
 python-slugify==8.0.4
 python-socks==2.5.3
 pytorch-lightning==2.5.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 pyyaml_env_tag==0.1
-pyzmq @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_95lsut8ymz/croot/pyzmq_1734709560733/work
+pyzmq==26.2.0
 readchar==4.2.1
 referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==13.9.4
 rich-click==1.8.5
-rpds-py==0.22.3
+rpds-py==0.21.0
 rsa==4.9
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.12
@@ -274,22 +299,25 @@ ruff==0.8.4
 safetensors==0.4.5
 schema==0.7.7
 scikit-learn==1.5.2
-scipy==1.14.1
+scipy==1.13.1
 scmrepo==3.3.9
 semver==3.0.2
+Send2Trash==1.8.3
 sentry-sdk==2.19.2
 setproctitle==1.3.4
 shellingham==1.5.4
 shortuuid==1.0.13
 shtab==1.7.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+six==1.16.0
+smart-open==7.0.5
 smmap==5.0.1
 snakeviz==2.2.2
 sniffio==1.3.1
+sounddevice==0.5.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
 sqltrie==0.11.1
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+stack-data==0.6.3
 starlette==0.41.3
 statsmodels==0.14.4
 streamlit==1.41.1
@@ -298,6 +326,7 @@ tabulate==0.9.0
 tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
+terminado==0.18.1
 text-unidecode==1.3
 threadpoolctl==3.5.0
 time-machine==2.16.0
@@ -305,23 +334,26 @@ tinycss2==1.4.0
 tokenizers==0.21.0
 toml==0.10.2
 tomlkit==0.13.2
-torch==2.4.0
+torch==2.5.1
 torch-tb-profiler==0.4.3
 torchmetrics==1.6.0
+torchsummary==1.5.1
 torchvision==0.20.1
-tornado @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_0axef5a0m0/croot/tornado_1733960501260/work
-tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+tornado==6.4.1
+tqdm==4.67.0
+traitlets==5.14.3
 transformers==4.47.1
-typer==0.15.1
-types-python-dateutil==2.9.0.20241206
+typer==0.13.1
+types-python-dateutil==2.9.0.20241003
 typing-inspect==0.9.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
 ujson==5.10.0
+uncertainties==3.2.2
+uri-template==1.3.0
 uritemplate==4.1.1
-urllib3==2.3.0
+urllib3==2.2.3
 uuid6==2024.7.10
 uvicorn==0.34.0
 uvloop==0.21.0
@@ -331,15 +363,18 @@ voluptuous==0.15.2
 wandb==0.19.1
 watchdog==6.0.0
 watchfiles==1.0.3
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+wcwidth==0.2.13
+webcolors==24.8.0
 webencodings==0.5.1
+websocket-client==1.8.0
 websockets==13.1
 Werkzeug==3.1.3
-wrapt==1.17.0
+widgetsnbextension==4.0.13
+wrapt==1.16.0
 xxhash==3.5.0
 yarg==0.1.9
 yarl==1.18.3
 zc.lockfile==3.0.post1
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+zipp==3.21.0
 zope.event==5.0
 zope.interface==7.2
