--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,10 +18,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.11
+        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
         pip install -r requirements_tests.txt
     - name: Test with pytest
       run: |
