--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,30 +1,37 @@
-name: "Run tests"
+name: Run Tests
 
 on:
-  push:
-    branches: [ master, main ]
   pull_request:
-    branches: [ master, main ]
+    branches:
+      - main
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout Code
       uses: actions/checkout@v4
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: 3.11
-        cache: 'pip'
-    - name: Install dependencies
+
+    - name: Install Dependencies
+      run: pip install -r requirements.txt
+
+    - name: Authenticate with GCP
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-        pip install -r requirements_tests.txt
-    - name: Test with pytest
+        echo "${{ secrets.GCP_CREDENTIALS }}" > gcp-key.json
+        gcloud auth activate-service-account --key-file=gcp-key.json
+      env:
+        GOOGLE_APPLICATION_CREDENTIALS: gcp-key.json
+
+    - name: Pull DVC Data
       run: |
-        pytest -v
+        dvc pull
+        ls data/processed  # Verify the file is present
+
+    - name: Run Tests
+      run: pytest -v
