--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,23 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Build container image'
-  args: [
-    'build',
-    'dummy_project',  # Specify the build context
-    '-t',
-    'europe-west1-docker.pkg.dev/$PROJECT_ID/dummy-repo/dummy-image',
-    '-f',
-    'dummy_project/Dockerfile'  # Specify the path to the Dockerfile
-  ]
+  args:
+  # Specify the build context and Dockerfile
+  - 'build'
+  - 'dummy_project'
+  - '-t'
+  - 'europe-west1-docker.pkg.dev/dvc-447620/dummy-repo/dummy-image'
+  - '-f'
+  - 'dummy_project/Dockerfile'
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Push container image'
-  args: [
-    'push',
-    'europe-west1-docker.pkg.dev/$PROJECT_ID/dummy-repo/dummy-image'
-  ]
+  args:
+  - 'push'
+  - 'europe-west1-docker.pkg.dev/dvc-447620/dummy-repo/dummy-image'
 
 images:
-- 'europe-west1-docker.pkg.dev/$PROJECT_ID/dummy-repo/dummy-image'
+- 'europe-west1-docker.pkg.dev/dvc-447620/dummy-repo/dummy-image'
+
+options:
+  logging: NONE  # Disable logging to avoid requiring a logs bucket
